stoat/src/snapshots/stoat__test_harness__conflict_view_padded_pick.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 150x20
---
[0m[38;2;99;109;131m[48;2;40;44;52m   1 [0m[38;2;250;250;250m[48;2;40;44;52mstart                                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m   1 [0m[38;2;250;250;250m[48;2;40;44;52mstart                                   [0m[38;2;99;109;131m[48;2;40;44;52m│   1 [0m[38;2;250;250;250m[48;2;40;44;52mstart                                              [0m
[0m[38;2;99;109;131m[48;2;40;44;52m   2 [0m[38;2;152;195;121m[48;2;40;44;52mO[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;224;108;117m[48;2;40;44;52mO[0m[38;2;99;109;131m[48;2;40;44;52m   2 [0m[38;2;250;250;250m[48;2;40;44;52mO                                       [0m[38;2;99;109;131m[48;2;40;44;52m│   2 [0m[38;2;198;120;221m[48;2;40;44;52mT1[0m[38;2;250;250;250m[48;2;40;44;52m                                                 [0m
[0m[38;2;99;109;131m[48;2;40;44;52m.....[0m[38;2;250;250;250m[48;2;40;44;52m                                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;224;108;117m[48;2;40;44;52mO[0m[38;2;99;109;131m[48;2;40;44;52m.....[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m[38;2;99;109;131m[48;2;40;44;52m│   3 [0m[38;2;198;120;221m[48;2;40;44;52mT2[0m[38;2;250;250;250m[48;2;40;44;52m                                                 [0m
[0m[38;2;99;109;131m[48;2;40;44;52m   3 [0m[38;2;250;250;250m[48;2;40;44;52mend                                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m   3 [0m[38;2;250;250;250m[48;2;40;44;52mend                         [0m[38;2;99;109;131m[48;2;40;44;52m┌ conflict ─────────────────────────────────────────────────────────┐[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m   4 [0m[38;2;250;250;250m[48;2;40;44;52m                            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mEsc, q[0m[38;2;250;250;250m[48;2;40;44;52m   close the conflict resolve view                          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     o[0m[38;2;250;250;250m[48;2;40;44;52m   resolve the current chunk by taking ours                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     t[0m[38;2;250;250;250m[48;2;40;44;52m   resolve the current chunk by taking theirs               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     b[0m[38;2;250;250;250m[48;2;40;44;52m   resolve the current chunk by taking both sides           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     O[0m[38;2;250;250;250m[48;2;40;44;52m   toggle the ours line at the cursor into the resolution   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     T[0m[38;2;250;250;250m[48;2;40;44;52m   toggle the theirs line at the cursor into the resolution [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     x[0m[38;2;250;250;250m[48;2;40;44;52m   reset the current chunk to its conflict markers          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     n[0m[38;2;250;250;250m[48;2;40;44;52m   move to the next conflict chunk                          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     p[0m[38;2;250;250;250m[48;2;40;44;52m   move to the previous conflict chunk                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     N[0m[38;2;250;250;250m[48;2;40;44;52m   move to the next conflicted file                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     P[0m[38;2;250;250;250m[48;2;40;44;52m   move to the previous conflicted file                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m   Ret[0m[38;2;250;250;250m[48;2;40;44;52m   write the resolved file and mark it resolved             [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│───────────────────────────────────────────────────────────────────│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m file 1/1 f.txt · 1 conflicts · 0 resolved                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                 [0m[38;2;99;109;131m[48;2;40;44;52m└───────────────────────────────────────────────────────────────────┘[0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [scratch] [+] [0m[38;2;99;109;131m[48;2;99;109;131m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 2:1 [0m
