stoat/src/snapshots/stoat__test_harness__count_jump_keeps_cursor_visible.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: j
focused: #1 of 1
mode: normal
size: 40x12
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m7[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m43[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m6[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m44[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m5[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m45[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m46[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m47[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m48[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m49[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;99;109;131m[48;2;40;44;52m51[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m50[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m51[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m52[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mline [0m[38;2;198;120;221m[48;2;40;44;52m53[0m[38;2;250;250;250m[48;2;40;44;52m                             [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) /test/long.rs [0m[38;2;99;109;131m[48;2;99;109;131m────[0m[38;2;250;250;250m[48;2;99;109;131m 51:1 [0m
