stoat/src/snapshots/stoat__test_harness__diagnostic_gutter_each_severity.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[38;2;224;108;117m[48;2;40;44;52m│[0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[4m[38;2;224;108;117m[48;2;40;44;52ma[0m[38;2;250;250;250m[48;2;40;44;52mlpha                                                                       [0m
[0m[38;2;229;192;123m[48;2;40;44;52m│[0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[4m[38;2;229;192;123m[48;2;40;44;52mb[0m[38;2;250;250;250m[48;2;40;44;52mravo                                                                       [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[4m[38;2;86;182;194m[48;2;40;44;52mc[0m[38;2;250;250;250m[48;2;40;44;52mharlie                                                                     [0m
[0m[38;2;99;109;131m[48;2;40;44;52m│3[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[4m[38;2;99;109;131m[48;2;40;44;52md[0m[38;2;250;250;250m[48;2;40;44;52melta                                                                       [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m diag-test a.txt [0m[38;2;99;109;131m[48;2;99;109;131m────────────────────────────────────────[0m[38;2;224;108;117m[48;2;99;109;131m E1 W1 I1 H1 [0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
